--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.1",
     "pdflatex": "^0.0.1"
   }
