--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "fs": "^0.0.1-security",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
     "pdflatex": "^0.0.1",
     "uuid": "^11.1.0"
   }
